added new recommendation feature

--- a/BMICalculator/Pages/bmi.cshtml
+++ b/BMICalculator/Pages/bmi.cshtml
@@ -45,6 +45,10 @@
                     @Html.DisplayNameFor(m => m.BMI.BMICategory)
                     @Html.DisplayFor(m => m.BMI.BMICategory)
                 </div>
+                <div>
+                    @Html.DisplayNameFor(m => m.BMI.Recommendation)
+                    @Html.DisplayFor(m => m.BMI.Recommendation)
+                </div>
             }
         </form>
     </div>
